[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/level/racing/StartLights.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/race_start_beep___f1-starting-lights-sound-download_audio_best.wav" type="AudioStream" id=3]

[node name="StartLights" type="Node2D"]
z_index = 4
script = ExtResource( 2 )

[node name="OffLights" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="OffLights"]
position = Vector2( -128, 0 )
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="Polygon2D2" type="Polygon2D" parent="OffLights"]
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="Polygon2D3" type="Polygon2D" parent="OffLights"]
position = Vector2( 120, 0 )
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="OnLights" type="Node2D" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="Polygon2D" type="Polygon2D" parent="OnLights"]
position = Vector2( -128, 0 )
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="Polygon2D2" type="Polygon2D" parent="OnLights"]
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="Polygon2D3" type="Polygon2D" parent="OnLights"]
position = Vector2( 120, 0 )
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="LightTimer" type="Timer" parent="."]
one_shot = true

[node name="CountdownA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "GameSfx"

[node name="CountdownB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
pitch_scale = 1.3
bus = "GameSfx"

[connection signal="timeout" from="LightTimer" to="." method="_on_Timer_timeout"]
